--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Vellore Semicon ESD-Monitor</title>
+    <!-- Meta Description -->
+<meta name="description" content="Ensure maximum safety and compliance in your electronics manufacturing with Vellore Semicon's advanced ESD-Monitor. Reliable real-time static monitoring for critical environments.">
+
+<!-- Meta Keywords (optional, not heavily used by modern search engines but still sometimes included) -->
+<meta name="keywords" content="ESD Monitor, Vellore Semicon, Static Control, Electronics Safety, ESD Protection, Cleanroom Equipment, Manufacturing Safety, Real Time Monitoring, ESD Compliance, Anti-Static">
+
   </head>
   <body>
     <div id="root"></div>
